Fix dropdown header alignment; empty navbar positioning

--- a/app/assets/stylesheets/framework/dropdowns.scss
+++ b/app/assets/stylesheets/framework/dropdowns.scss
@@ -749,7 +749,7 @@
       margin-bottom: $dropdown-vertical-offset;
     }
 
-    li {
+    li:not(.dropdown-bold-header) {
       display: block;
       padding: 0 1px;
 
